--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
